--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -156,7 +156,7 @@
                                     <span>杜崎 拓</span>
                                 </h3>
                                 <p>
-                                    이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 반골정신의 소유자.<br><br>
+                                    이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 <abbr title="세상의 일이나 권위 따위에 순종하지 않고 반항하는 기질">반골기질</abbr>의 소유자.<br><br>
                                     평범하지만 정의감 넘치는 소년, 리카코를 좋아하는 자신의 감정을 깨닫지 못하는 둔감한 구석이 있다.<br><br>
                                     고교 졸업 후, 도쿄의 대학으로 진학한다. 본가는 고치 시의 고다이산(五台山)
                                 </p>
