--- a/001.HTML/012.Blue_PJ/intro.html
+++ b/001.HTML/012.Blue_PJ/intro.html
@@ -15,6 +15,9 @@
     <div class="wrap">
         <h1 class="tit"><a href="./index.html">C'mon Through</a></h1>
         <div class="bg"></div>
+        <div class="wall">
+            <img src="images/wall.jpg" alt="백그라운드 이미지">
+        </div>
     </div>
 </body>
 </html>
