--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="./img/sub4link.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./css/sub4.css">
     <link rel="stylesheet" href="./css/submedia.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -22,8 +23,8 @@
             <button class="cbtn" onclick="sMenu()">×</button>
             <ul>
                 <li>
-                    <a href="#">Studio Ghibli</a>
-                    <ol class="smenu">
+                    <a href="#pg">Home</a>
+                    <!-- <ol class="smenu">
                         <li>
                             <a href="#">Home</a>
                         </li>
@@ -33,11 +34,11 @@
                         <li>
                             <a href="#pg2">Characters</a>
                         </li>
-                    </ol>
+                    </ol> -->
                 </li>
                 <li>
-                    <a href="#">영화</a>
-                    <ol class="smenu">
+                    <a href="#pg1">Ocean Waves</a>
+                    <!-- <ol class="smenu">
                         <li>
                             <a href="#">상영관</a>
                         </li>
@@ -50,18 +51,21 @@
                         <li>
                             <a href="#">이벤트</a>
                         </li>
-                    </ol>
+                    </ol> -->
                 </li>
                 <li>
-                    <a href="#">갤러리</a>
-                    <ol class="smenu">
+                    <a href="#pg2">Characters</a>
+                    <!-- <ol class="smenu">
                         <li>
                             <a href="#">지브리 미술관</a>
                         </li>
                         <li>
                             <a href="#">지브리 전시회</a>
                         </li>
-                    </ol>
+                    </ol> -->
+                </li>
+                <li>
+                    <a href="#pg3">Ending</a>
                 </li>
                 <li><a href="#"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
             </ul>
@@ -254,7 +258,12 @@
                     </div>
                 </div>
         </section>
-        </main>
+
+        <!-- /******************************************* cont3 *******************************************/ -->
+        <section id="pg4" class="cont4">
+            
+        </section>
+
 
         <!-- /******************************************* 하단 *******************************************/ -->
         <footer id="footer">
