--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="./img/sub4link.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./css/sub4.css">
     <link rel="stylesheet" href="./css/submedia.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
@@ -67,7 +68,7 @@
                 <li>
                     <a href="#pg3">Ending</a>
                 </li>
-                <li><a href="#"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
+                <li><a href="#pg4"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
             </ul>
         </nav>
         <header class="top ibx">
@@ -135,13 +136,18 @@
                                         <!-- <span>海がきこえる</span> -->
                                     </h3>
                                     <p>
-                                        스튜디오 지브리가 제작한 TV판 애니메이션이다. 도쿄에서 전학 온 리카코를 좋아하게 된 타쿠와 마츠노의 우정과 사랑을 그린 이야기. <br><br>
-                                        &lt;바다가 들린다&gt;의 의미는 상당히 비유적으로 나타난다. 때문에 단순히 바다를 자주 보여준다거나 하와이가 등장하는 것에서 의미를 찾아야 하는
+                                        스튜디오 지브리가 제작한 TV판 애니메이션이다. 도쿄에서 전학 온 리카코를 좋아하게 된 타쿠와 마츠노의 우정과 사랑을 그린 이야기.
+                                        <br><br>
+                                        &lt;바다가 들린다&gt;의 의미는 상당히 비유적으로 나타난다. 때문에 단순히 바다를 자주 보여준다거나 하와이가 등장하는 것에서 의미를 찾아야
+                                        하는
                                         것이 아니라 그들이 어른이 되어서 생각하는 성장의 과정을 생각해 봐야 한다.<br><br>
-                                        특히 동창회에서 타쿠는 시미즈와 대화를 나누던 중<br> “학교 이외의 세계가 생기면 싫은 애 한둘 쯤은 어떻게 되어도 상관없다고 생각하게 된다”는
+                                        특히 동창회에서 타쿠는 시미즈와 대화를 나누던 중<br> “학교 이외의 세계가 생기면 싫은 애 한둘 쯤은 어떻게 되어도 상관없다고 생각하게
+                                        된다”는
                                         얘기를 하게 되는데 이 말이 제목인 &lt;바다가 들린다&gt;의 의미를 생성한다.<br><br>
-                                        타쿠의 동창생들은 고등학교 시절 외부에서 온 리카코가 자신들과 화합하지 않는다는 이유로 따돌리는 모습을 보여준다. 그런 이들이 성장하여 돌이켜보니 넓은
-                                        세상에서 그런 일쯤은 아무것도 아니라는 것을 알게 된다.<br>결국 넓은 세상은 ‘바다’를 가리키고, ‘들린다’는 그런 넓은 마음을 갖게 되었다는 것을
+                                        타쿠의 동창생들은 고등학교 시절 외부에서 온 리카코가 자신들과 화합하지 않는다는 이유로 따돌리는 모습을 보여준다. 그런 이들이 성장하여
+                                        돌이켜보니 넓은
+                                        세상에서 그런 일쯤은 아무것도 아니라는 것을 알게 된다.<br>결국 넓은 세상은 ‘바다’를 가리키고, ‘들린다’는 그런 넓은 마음을 갖게
+                                        되었다는 것을
                                         뜻하며, 바다가 가진 향수와 관대함을 연관시키며 의미하는 바를 만들어내는 것이다.<br><br>
                                     </p>
                                 </div>
@@ -160,7 +166,8 @@
                                     <span>杜崎 拓</span>
                                 </h3>
                                 <p>
-                                    이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 <abbr title="세상의 일이나 권위 따위에 순종하지 않고 반항하는 기질">반골기질</abbr>의 소유자.<br><br>
+                                    이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 <abbr
+                                        title="세상의 일이나 권위 따위에 순종하지 않고 반항하는 기질">반골기질</abbr>의 소유자.<br><br>
                                     평범하지만 정의감 넘치는 소년, 리카코를 좋아하는 자신의 감정을 깨닫지 못하는 둔감한 구석이 있다.<br><br>
                                     고교 졸업 후, 도쿄의 대학으로 진학한다. 본가는 고치 시의 고다이산(五台山)
                                 </p>
@@ -237,6 +244,7 @@
         </section>
 
         <!-- /******************************************* cont3 *******************************************/ -->
+
         <section id="pg3" class="cont3">
             <div class="inner">
                 <h2 class="tit">Ending</h2>
@@ -259,11 +267,27 @@
                 </div>
         </section>
 
-        <!-- /******************************************* cont3 *******************************************/ -->
+        <!-- /******************************************* cont4 *******************************************/ -->
         <section id="pg4" class="cont4">
-            
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-11.jpg" alt="바다가들린다 갤러리사진11번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-10.jpg" alt="바다가들린다 갤러리사진10번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-4.jpg" alt="바다가들린다 갤러리사진4번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-2.jpg" alt="바다가들린다 갤러리사진2번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-9.jpg" alt="바다가들린다 갤러리사진9번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-6.jpg" alt="바다가들린다 갤러리사진6번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-7.avif" alt="바다가들린다 갤러리사진7번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-8.jpg" alt="바다가들린다 갤러리사진8번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-1.jpg" alt="바다가들린다 갤러리사진1번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-3.jpg" alt="바다가들린다 갤러리사진3번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-5.jpg" alt="바다가들린다 갤러리사진5번"></div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
         </section>
-
 
         <!-- /******************************************* 하단 *******************************************/ -->
         <footer id="footer">
