--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -24,7 +24,7 @@
             <button class="cbtn" onclick="sMenu()">×</button>
             <ul>
                 <li>
-                    <a href="#pg">Home</a>
+                    <a href="#pg">Main</a>
                     <!-- <ol class="smenu">
                         <li>
                             <a href="#">Home</a>
