--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -121,7 +121,7 @@
                             <div class="re">
                                 <div class="txtbx">
                                     <div class="img">
-                                        <img class="iimg" src="./img/sub4img/img1.webp" alt="포스터">
+                                        <img class="iimg" src="./img/sub4img/performance.jpeg" alt="포스터">
                                     </div>
                                     <h3>'바다가 들린다' 제목의 의미</h3>
                                     <p>
@@ -260,17 +260,17 @@
         <section id="pg4" class="cont4">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-3.jpg" alt="바다가들린다 갤러리사진3번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/gallery-5.jpg" alt="바다가들린다 갤러리사진5번"></div>
                     <div class="swiper-slide"><img src="img/sub4img/gallery-11.jpg" alt="바다가들린다 갤러리사진11번"></div>
-                    <div class="swiper-slide"><img src="img/sub4img/gallery-10.jpg" alt="바다가들린다 갤러리사진10번"></div>
                     <div class="swiper-slide"><img src="img/sub4img/gallery-4.jpg" alt="바다가들린다 갤러리사진4번"></div>
                     <div class="swiper-slide"><img src="img/sub4img/gallery-2.jpg" alt="바다가들린다 갤러리사진2번"></div>
                     <div class="swiper-slide"><img src="img/sub4img/gallery-9.jpg" alt="바다가들린다 갤러리사진9번"></div>
-                    <div class="swiper-slide"><img src="img/sub4img/gallery-6.jpg" alt="바다가들린다 갤러리사진6번"></div>
                     <div class="swiper-slide"><img src="img/sub4img/gallery-7.avif" alt="바다가들린다 갤러리사진7번"></div>
                     <div class="swiper-slide"><img src="img/sub4img/gallery-8.jpg" alt="바다가들린다 갤러리사진8번"></div>
                     <div class="swiper-slide"><img src="img/sub4img/gallery-1.jpg" alt="바다가들린다 갤러리사진1번"></div>
-                    <div class="swiper-slide"><img src="img/sub4img/gallery-3.jpg" alt="바다가들린다 갤러리사진3번"></div>
-                    <div class="swiper-slide"><img src="img/sub4img/gallery-5.jpg" alt="바다가들린다 갤러리사진5번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/g2.jpeg" alt="바다가들린다 갤러리사진6번"></div>
+                    <div class="swiper-slide"><img src="img/sub4img/g1.jpeg" alt="바다가들린다 갤러리사진10번"></div>
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
