--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -17,60 +17,63 @@
 
     <!-- ******************************************* 상단 ******************************************* -->
     <div id="top">
-        <div class="ham">
-            <button class="menu" onclick="sMenu()">=</button>
+
+        <div class="sideM">
+            <div class="ham">
+                <button class="menu" onclick="sMenu()">=</button>
+            </div>
+            <nav class="gnb1">
+                <button class="cbtn" onclick="sMenu()">×</button>
+                <ul>
+                    <li>
+                        <a href="#pg">Main</a>
+                        <!-- <ol class="smenu">
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#pg1">Ocean Waves</a>
+                            </li>
+                            <li>
+                                <a href="#pg2">Characters</a>
+                            </li>
+                        </ol> -->
+                    </li>
+                    <li>
+                        <a href="#pg1">Ocean Waves</a>
+                        <!-- <ol class="smenu">
+                            <li>
+                                <a href="#">상영관</a>
+                            </li>
+                            <li>
+                                <a href="#">장소</a>
+                            </li>
+                            <li>
+                                <a href="#">티켓구매</a>
+                            </li>
+                            <li>
+                                <a href="#">이벤트</a>
+                            </li>
+                        </ol> -->
+                    </li>
+                    <li>
+                        <a href="#pg2">Characters</a>
+                        <!-- <ol class="smenu">
+                            <li>
+                                <a href="#">지브리 미술관</a>
+                            </li>
+                            <li>
+                                <a href="#">지브리 전시회</a>
+                            </li>
+                        </ol> -->
+                    </li>
+                    <li>
+                        <a href="#pg3">Ending</a>
+                    </li>
+                    <li><a href="#pg4"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="gnb1">
-            <button class="cbtn" onclick="sMenu()">×</button>
-            <ul>
-                <li>
-                    <a href="#pg">Main</a>
-                    <!-- <ol class="smenu">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#pg1">Ocean Waves</a>
-                        </li>
-                        <li>
-                            <a href="#pg2">Characters</a>
-                        </li>
-                    </ol> -->
-                </li>
-                <li>
-                    <a href="#pg1">Ocean Waves</a>
-                    <!-- <ol class="smenu">
-                        <li>
-                            <a href="#">상영관</a>
-                        </li>
-                        <li>
-                            <a href="#">장소</a>
-                        </li>
-                        <li>
-                            <a href="#">티켓구매</a>
-                        </li>
-                        <li>
-                            <a href="#">이벤트</a>
-                        </li>
-                    </ol> -->
-                </li>
-                <li>
-                    <a href="#pg2">Characters</a>
-                    <!-- <ol class="smenu">
-                        <li>
-                            <a href="#">지브리 미술관</a>
-                        </li>
-                        <li>
-                            <a href="#">지브리 전시회</a>
-                        </li>
-                    </ol> -->
-                </li>
-                <li>
-                    <a href="#pg3">Ending</a>
-                </li>
-                <li><a href="#pg4"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
-            </ul>
-        </nav>
         <header class="top ibx">
             <div class="logo">
                 <a href="#">
@@ -81,12 +84,13 @@
                 <div>
                     <ul class="lb">
                         <li class="on"><a href="#pg1">Ocean Waves</a></li>
+                        <li><a href="#pg2">Characters</a></li>
                     </ul>
                 </div>
                 <div>
                     <ul class="rb">
-                        <li></li>
-                        <li><a href="#pg2">Characters</a></li>
+                        <li><a href="#pg3">Ending</a></li>
+                        <li><a href="#pg4">Gallery</a></li>
                     </ul>
                 </div>
             </div>
