--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -127,7 +127,7 @@
                                     <div class="img">
                                         <img class="iimg" src="./img/sub4img/performance.jpeg" alt="포스터">
                                     </div>
-                                    <h3>'바다가 들린다' 제목의 의미</h3>
+                                    <h3>제목의 의미</h3>
                                     <p>
                                         스튜디오 지브리가 제작한 TV판 애니메이션이다. 도쿄에서 전학 온 리카코를 좋아하게 된 타쿠와 마츠노의 우정과 사랑을 그린 이야기.
                                         <br><br>
