--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -70,7 +70,7 @@
                     <li>
                         <a href="#pg3">Ending</a>
                     </li>
-                    <li><a href="#pg4"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
+                    <li><a href="#footer"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
                 </ul>
             </nav>
         </div>
