--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/common.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
     <!------------------------------------------------- header ------------------------------------------------->
     <div class="wrapBox">
         <header class="header">
-            <h1 class="title subH1">klinblue</h1>
-            <h1 class="title mainH1">klinblue</h1>
-            <div class="menuBtn">=</div>
+            <h1 class="title subH1">Yves Kline</h1>
+            <h1 class="title mainH1">kline Blue</h1>
+            <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
         </header>
+        <div class="menuBox">
+            <ul>
+                <li>하나</li>
+                <li>둘</li>
+                <li>셋</li>
+            </ul>
+        </div>
         <!------------------------------------------------- cont1 ------------------------------------------------->
         <div class="cont cont1">
 
@@ -33,6 +41,8 @@
 
         </footer>
     </div>
+    <script src="JS/mian.js"></script>
+
 </body>
 
 </html>
