--- a/001.HTML/012.Blue_PJ/intro.html
+++ b/001.HTML/012.Blue_PJ/intro.html
@@ -5,16 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/intro.css">
-    <script>
-        window.addEventListener('DOMContentLoaded', function () {
-
-        });
-    </script>
 </head>
 <body>
     <div class="wrap">
         <h1 class="tit">
-            <a href="./index.html">C'mon Through</a>
+            <a href="./index.html"><span>C'mon Through</span></a>
         </h1>
         <div class="bg"></div>
         <div class="wall">
