--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -13,36 +13,48 @@
     <!------------------------------------------------- header ------------------------------------------------->
     <div class="wrapBox">
         <header class="header">
-            <h1 class="title subH1">Yves Kline</h1>
-            <h1 class="title mainH1">kline Blue</h1>
+            <h1 class="title mainH1"><a href="#">Kline Blue</a></h1>
+            <h2 class="title subH2">Yves Kline</h2>
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
         </header>
-        <div class="menuBox">
-            <ul>
-                <li>하나</li>
-                <li>둘</li>
-                <li>셋</li>
-            </ul>
-        </div>
         <!------------------------------------------------- cont1 ------------------------------------------------->
-        <div class="cont cont1">
-
-        </div>
+        <main class="cont cont1">
+            <div class="mainL">
+                <div class="mainImgL"></div>
+                <h3 class="mainTitL">Portrait d'Yves Klein</h3>
+                <p class="mainTxtL">
+                    Portrait d'Yves Klein réalisé à l'occasion du tournage de Peter Morley "The Heartbeat of France"
+                </p>
+            </div>
+            <div class="mainC">
+                <div class="mainImgC1">
+                    <h3 class="mainTitC">Nu d'Iris Clert sortant de l'onde</h3>
+                </div>
+                <div class="mainImgC2"></div>
+            </div>
+            <div class="mainR">
+                <div class="mainImgR"></div>
+                <h3 class="mainImgmainTitR">Peinture de Feu sans titre</h3>
+                <p class="mainTxtR">Yves Klein's gesture evokes a man's
+                    fantasy of controlling and mastering fire.</p>
+            </div>
+            <span class="down">Scroll<br><img src="images/scroll.png" alt="다운스크롤"></span>
+        </main>
         <!------------------------------------------------- cont2 ------------------------------------------------->
-        <div class="cont cont2">
+        <section class="cont cont2">
 
-        </div>
+        </section>
         <!------------------------------------------------- cont3 ------------------------------------------------->
-        <div class="cont cont3">
+        <section class="cont cont3">
 
-        </div>
+        </section>
         <!------------------------------------------------- footer ------------------------------------------------->
         <footer class="footer">
 
         </footer>
     </div>
+    
     <script src="JS/mian.js"></script>
-
 </body>
 
 </html>
