--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -13,18 +13,21 @@
     <!------------------------------------------------- header ------------------------------------------------->
     <div class="wrapBox">
         <header class="header">
-            <h1 class="title mainH1"><a href="#">Kline Blue</a></h1>
-            <h2 class="title subH2">Yves Kline</h2>
+            <h1 class="title mainH1"><a href="#">KLEIN BLUE</a></h1>
+            <h2 class="title subH2">YVES KLEIN</h2>
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
         </header>
         <!------------------------------------------------- cont1 ------------------------------------------------->
         <main class="cont cont1">
             <div class="mainL">
                 <div class="mainImgL"></div>
-                <h3 class="mainTitL">Portrait d'Yves Klein</h3>
-                <p class="mainTxtL">
-                    Portrait d'Yves Klein réalisé à l'occasion du tournage de Peter Morley "The Heartbeat of France"
-                </p>
+                <div class="mainT">
+                    <h3 class="mainTitL">Portrait d'Yves Klein</h3>
+                    <p class="mainTxtL">
+                        Portrait d'Yves Klein réalisé à l'occasion du tournage de Peter Morley<br>"The Heartbeat of France"
+                    </p>
+                </div>
+                <div class="mainImg2"></div>
             </div>
             <div class="mainC">
                 <div class="mainImgC1">
@@ -34,9 +37,12 @@
             </div>
             <div class="mainR">
                 <div class="mainImgR"></div>
-                <h3 class="mainImgmainTitR">Peinture de Feu sans titre</h3>
-                <p class="mainTxtR">Yves Klein's gesture evokes a man's
-                    fantasy of controlling and mastering fire.</p>
+                <div class="mainT">
+                    <h3 class="mainImgmainTitR">Peinture de Feu sans titre</h3>
+                    <p class="mainTxtR">Yves Klein's gesture evokes a man's
+                        fantasy of controlling and mastering fire.</p>
+                    </div>
+                    <div class="mainImg2 R"></div>
             </div>
             <span class="down">Scroll<br><img src="images/scroll.png" alt="다운스크롤"></span>
         </main>
