--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="mainImg2 R"></div>
             </div>
-            <span class="down">Scroll<br><img src="images/scroll.png" alt="다운스크롤"></span>
+                <span class="down">Scroll<br><img src="images/scroll.png" alt="스크롤"></span>
         </main>
         <!------------------------------------------------- cont2 ------------------------------------------------->
         <section class="cont cont2">
