--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -48,7 +48,7 @@
         </main>
         <!------------------------------------------------- cont2 ------------------------------------------------->
         <section class="cont cont2">
-
+            <video class="Mvideo" src="video/yves540.mp4" muted playsinline controls></video>
         </section>
         <!------------------------------------------------- cont3 ------------------------------------------------->
         <section class="cont cont3">
