--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -62,15 +62,21 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
               </div>
-            
         </section>
         <!------------------------------------------------- cont3 ------------------------------------------------->
         <section class="cont cont3">
-
+            <div class="c3boxL">
+                <h4 class="c3titL">fasjlassl</h4>
+                <div class="c3imgbxL">asf</div>
+            </div>
+            <div class="c3boxR">
+                <div class="c3imgbxR">jdsafb</div>
+                <h4 class="c3titR">asf</h4>
+            </div>
         </section>
         <!------------------------------------------------- footer ------------------------------------------------->
         <footer class="footer">
-
+            footer
         </footer>
     </div>
     
