--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -57,26 +57,72 @@
                   <div class="swiper-slide"><img src="images/cont2bg2.png" alt="이미지2번"></div>
                   <div class="swiper-slide"><img src="images/cont2bg3.png" alt="이미지3번"></div>
                   <div class="swiper-slide"><img src="images/cont2bg4.png" alt="이미지4번"></div>
+                  <div class="swiper-slide"><img src="images/cont2bg5.jpeg" alt="이미지5번"></div>
+                  <div class="swiper-slide"><img src="images/cont2bg6.jpeg" alt="이미지6번"></div>
+                  <div class="swiper-slide"><img src="images/cont2bg7.jpeg" alt="이미지7번"></div>
+                  <div class="swiper-slide"><img src="images/cont2bg8.jpeg" alt="이미지8번"></div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
         </section>
         <!------------------------------------------------- cont3 ------------------------------------------------->
         <section class="cont cont3">
             <div class="c3boxL">
-                <h4 class="c3titL">fasjlassl</h4>
-                <div class="c3imgbxL">asf</div>
+                <div class="c3titL">
+                    <div class="tWrap">
+                        <h4>Le Saut dans le vide!!!</h4>
+                        <p>
+                            Le titre de cette œuvre photographique d'Yves Klein parue dans son journal Dimanche 27 novembre 1960<br>
+                            Le journal d'un seul jour, est :<br>
+                            « Un homme dans l'espace ! Le peintre de l'espace se jette dans le vide ! ».
+                        </p>
+                    </div>
+                </div>
+                <div class="c3imgbxL"><div class="c3imgL"></div></div>
             </div>
             <div class="c3boxR">
-                <div class="c3imgbxR">jdsafb</div>
-                <h4 class="c3titR">asf</h4>
+                <div class="c3imgbxR"><div class="c3imgR"></div></div>
+                <div class="c3titR">
+                    <div class="tWrap">
+                        <h4>
+                            Publication de<br>
+                                "Dimanche 27 novembre, le journal d'un seul jour",<br>
+                                manifestation artistique d'Yves Klein dans le cadre du Festival d'Art d'Avant-Garde
+                        </h4>
+                        <p>
+                            Ce « journal » de quatre pages, imprimé par Combat et Presse de France réunis, à l’occasion du troisième<br>
+                            Festival d’Art d’avant-garde organisé par Jacques Polieri et Michel Ragon, est un pastiche du vrai Journal du dimanche.<br>
+                            Tout a été entièrement conçu par l’artiste : titres, caractères, mise en page. Le dimanche 27 novembre 1960,<br>
+                            Yves Klein fait distribuer dans les kiosques parisiens Le journal d'un seul jour.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <!------------------------------------------------- footer ------------------------------------------------->
         <footer class="footer">
-            footer
+            <div class="footLbx">
+                <ul>
+                    <li><span>LANGUAGE : </span><button type="button">FRANCAIS</button></li>
+                    <li>MADE BY <i>BO SEONG KANG</i></li>
+                </ul>
+            </div>
+            <nav class="footCbx">
+                <div class="menu menu1"><a href="#">menu1</a></div>
+                <div class="menu menu2"><a href="#">menu2</a></div>
+                <div class="menu menu3"><a href="#">menu3</a></div>
+                <div class="menu menu4"><a href="#">menu4</a></div>
+            </nav>
+            <div class="footRbx">
+                <div class="sns">
+                    <div class="snsTit"><a href="#">FOLLOW US</a></div>
+                    <div class="insta"><a href="#">insta</a></div>
+                    <div class="faceb"><a href="#">face</a></div>
+                    <div class="yutub"><a href="#">yout</a></div>
+                </div>
+            </div>
         </footer>
     </div>
     
