--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -103,25 +103,38 @@
         </section>
         <!------------------------------------------------- footer ------------------------------------------------->
         <footer class="footer">
-            <div class="footLbx">
-                <ul>
-                    <li><span>LANGUAGE : </span><button type="button">FRANCAIS</button></li>
-                    <li>MADE BY <i>BO SEONG KANG</i></li>
-                </ul>
-            </div>
-            <nav class="footCbx">
-                <div class="menu menu1"><a href="#">menu1</a></div>
-                <div class="menu menu2"><a href="#">menu2</a></div>
-                <div class="menu menu3"><a href="#">menu3</a></div>
-                <div class="menu menu4"><a href="#">menu4</a></div>
-            </nav>
-            <div class="footRbx">
-                <div class="sns">
-                    <div class="snsTit"><a href="#">FOLLOW US</a></div>
-                    <div class="insta"><a href="#">insta</a></div>
-                    <div class="faceb"><a href="#">face</a></div>
-                    <div class="yutub"><a href="#">yout</a></div>
+            <div class="footInfo">
+                <div class="footLbx">
+                    <ul>
+                        <li><span>LANGUAGE : </span><button type="button">FRANCAIS</button></li>
+                        <li>MADE BY <i>BO SEONG KANG</i></li>
+                        <li>CONTACT : 010-3362-1793</li>
+                    </ul>
                 </div>
+                <nav class="footCbx">
+                    <div class="menu menu1"><a href="#">menu1</a></div>
+                    <div class="menu menu2"><a href="#">menu2</a></div>
+                    <div class="menu menu3"><a href="#">menu3</a></div>
+                    <div class="menu menu4"><a href="#">menu4</a></div>
+                    <div class="menu menu4"><a href="#">EXIT</a></div>
+                </nav>
+                <div class="footRbx">
+                    <div class="snsWrap">
+                        <div class="snsTit">FOLLOW US</div>
+                        <div class="sns">
+                            <div class="insta"><a href="#">instagram</a></div>
+                            <div class="faceb"><a href="#">facebook</a></div>
+                            <div class="yutub"><a href="#">youtube</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
+                <ul>
+                    <li>RETOUCHED PHOTOGRAPHS</li>
+                    <li>COPYRIGHT 2023-2024 AMERICAN VINTAGE</li>
+                    <li>ALL RIGHTS RESERVED</li>
+                </ul>
             </div>
         </footer>
     </div>
