--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -72,7 +72,7 @@
             <div class="c3boxL">
                 <div class="c3titL">
                     <div class="tWrap">
-                        <h4>Le Saut dans le vide!!!</h4>
+                        <h4>Le Saut dans le vide!</h4>
                         <p>
                             Le titre de cette œuvre photographique d'Yves Klein parue dans son journal Dimanche 27 novembre 1960<br>
                             Le journal d'un seul jour, est :<br>
