--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -116,7 +116,7 @@
                     <div class="menu menu2"><a href="#">menu2</a></div>
                     <div class="menu menu3"><a href="#">menu3</a></div>
                     <div class="menu menu4"><a href="#">menu4</a></div>
-                    <div class="menu menu4"><a href="#">EXIT</a></div>
+                    <div class="menu menu4"><a href="intro.html">EXIT</a></div>
                 </nav>
                 <div class="footRbx">
                     <div class="snsWrap">
