--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -47,8 +47,9 @@
                     </div>
                     <div class="mainImg2 R"></div>
             </div>
-                    <span class="down">
+                    <span class="down"><a href="#">
                         <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
+                    </a>
                     </span>
         </main>
         <!------------------------------------------------- cont2 ------------------------------------------------->
