--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KLEIN BLUE</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -19,6 +19,18 @@
             <h1 class="title mainH1"><a href="#">KLEIN BLUE</a></h1>
             <h2 class="title subH2">YVES KLEIN</h2>
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
+            <nav class="ham">
+                <ul>
+                    <li><a href="#">menu1</a></li>
+                    <li><a href="#">menu2</a></li>
+                    <li><a href="#">menu3</a></li>
+                    <li><a href="#">menu4</a></li>
+                    <li><a href="#" id="exit">EXIT</a></li>
+                </ul>
+                <div class="imgCont">
+                    <img src="images/Yves-Klein.jpg" alt="Yves Klein">
+                </div>
+            </nav>
         </header>
         <!------------------------------------------------- cont1 ------------------------------------------------->
         <main class="cont cont1">
