--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -21,14 +21,14 @@
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
             <nav class="ham">
                 <ul>
-                    <li><a href="#">menu1</a></li>
-                    <li><a href="#">menu2</a></li>
-                    <li><a href="#">menu3</a></li>
-                    <li><a href="#">menu4</a></li>
-                    <li><a href="#" id="exit">EXIT</a></li>
+                    <li data-image="images/mli1.jpeg"><a href="#">menu1</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="#">menu2</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="#">menu3</a></li>
+                    <li data-image="images/mli4.jpeg"><a href="#">menu4</a></li>
+                    <li data-image="images/exit.jpeg"><a href="#" id="exit">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
-                    <img src="images/Yves-Klein.jpg" alt="Yves Klein">
+                    <img src="images/mMain01.jpeg" alt="Yves Klein">
                 </div>
             </nav>
         </header>
