--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -21,11 +21,11 @@
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
             <nav class="ham">
                 <ul>
-                    <li data-image="images/mli1.jpeg"><a href="#">artist</a></li>
-                    <li data-image="images/mli2.jpeg"><a href="#">exhibition</a></li>
-                    <li data-image="images/mli3.jpeg"><a href="#">news</a></li>
-                    <li data-image="images/mli4.jpeg"><a href="#">made</a></li>
-                    <li data-image="images/exit.jpeg"><a href="#" id="exit">exit</a></li>
+                    <li data-image="images/mli1.jpeg"><a href="#">Artist</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="#">Exhibition</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="#">News</a></li>
+                    <li data-image="images/exit.jpeg"><a href="#" id="exit">Close</a></li>
+                    <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">Exit</a></li>
                 </ul>
                 <div class="imgCont">
                     <img src="images/mMain01.jpeg" alt="Yves Klein">
@@ -127,10 +127,10 @@
                     </ul>
                 </div>
                 <nav class="footCbx">
-                    <div class="menu menu1"><a href="#">artist</a></div>
-                    <div class="menu menu2"><a href="#">exhibition</a></div>
-                    <div class="menu menu3"><a href="#">news</a></div>
-                    <div class="menu menu4"><a href="#">made</a></div>
+                    <div class="menu menu1"><a href="#">Artist</a></div>
+                    <div class="menu menu2"><a href="#">Exhibition</a></div>
+                    <div class="menu menu3"><a href="#">News</a></div>
+                    <!-- <div class="menu menu4"><a href="#">made</a></div> -->
                     <div class="menu menu4"><a href="outro.html">EXIT</a></div>
                 </nav>
                 <div class="footRbx">
