--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -21,14 +21,14 @@
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
             <nav class="ham">
                 <ul>
-                    <li data-image="images/mli1.jpeg"><a href="#">Artist</a></li>
-                    <li data-image="images/mli2.jpeg"><a href="#">Exhibition</a></li>
-                    <li data-image="images/mli3.jpeg"><a href="#">News</a></li>
-                    <li data-image="images/exit.jpeg"><a href="#" id="exit">Close</a></li>
-                    <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">Exit</a></li>
+                    <li data-image="images/mli1.jpeg"><a href="#">ARTIST</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="#">EXHIBITION</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="#">NEWS</a></li>
+                    <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
+                    <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
-                    <img src="images/mMain01.jpeg" alt="Yves Klein">
+                    <img src="images/mbt3.jpeg" alt="Yves Klein">
                 </div>
             </nav>
         </header>
@@ -59,6 +59,7 @@
                     </div>
                     <div class="mainImg2 R"></div>
             </div>
+            <div class="more"><span><a href="#">view more</a></span></div>
                     <span class="down"><a href="#">
                         <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
                     </a>
@@ -81,6 +82,7 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-pagination"></div>
+            <div class="more"><span><a href="#">view more</a></span></div>
         </section>
         <!------------------------------------------------- cont3 ------------------------------------------------->
         <section class="cont cont3">
@@ -115,14 +117,15 @@
                     </div>
                 </div>
             </div>
+            <div class="more"><span><a href="#">view more</a></span></div>
         </section>
         <!------------------------------------------------- footer ------------------------------------------------->
         <footer class="footer">
             <div class="footInfo">
                 <div class="footLbx">
                     <ul>
-                        <li><span>LANGUAGE : </span><button type="button">FRANCAIS</button></li>
-                        <li>MADE BY <i>BO SEONG KANG</i></li>
+                        <li><span>LANGUAGE : </span><button type="button">FRANÇAIS</button></li>
+                        <li>CREATED BY <i>BOSEONG KANG</i></li>
                         <li>CONTACT : 010-3362-1793</li>
                     </ul>
                 </div>
